Fix mobile overflow

--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -56,10 +56,6 @@
     max-width: 654px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
-    @media(max-width: 767px) {
-      margin-top: 48px;
-    }
-
     &.hidden {
       .chat-message {
         opacity: 0;
